fix height for display scrollbar

--- a/src/components/hoc/withScrollBar/withScrollBar.module.css
+++ b/src/components/hoc/withScrollBar/withScrollBar.module.css
@@ -5,7 +5,7 @@
 }
 
 .noScrollWrapper {
-  height: 25rem;
+  height: 26rem;
   width: 103%;
   overflow-y: scroll;
 }
